# airflow-dbt-duckdb

./: .env.example  .gitignore  EXPLORE_DATA_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  explore_data.sh  pyproject.toml  requirements.txt  verify_setup.sh
config/: simple_auth_manager_passwords.json
dags/: dbt_analytics_dag.py  simple_dbt_dag.py
data/: .gitkeep
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/models/marts/: customer_orders.sql  order_revenue.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_lineitem.sql  stg_orders.sql
dbt/seeds/: raw_customers.csv  raw_orders.csv
docker/: Dockerfile  Dockerfile.metrics  init-ducklake-db.sql  requirements.txt
docs/: bigquery_multi_source_architecture.md
grafana/dashboards/: airflow_pipeline.json  container_resources.json  ducklake_observability.json
grafana/provisioning/dashboards/: provider.yaml
grafana/provisioning/datasources/: postgres.yaml  prometheus.yaml
include/: .gitkeep
otel/: otel-collector-config.yaml
prometheus/: prometheus.yml
scripts/: ducklake_metrics.py  init_tpch.py  query_duckdb.py
tests/: test_dag_integrity.py
