[project]
name = "airflow-dbt-duckdb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "airflow-provider-duckdb>=0.2.0",
    "astronomer-cosmos>=1.14.0",
    "dbt-core>=1.10.0",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=18.0.0",
]

[tool.uv]
package = false
# Pin to the base image's Airflow version — prevents uv from resolving transitive deps
# (cosmos, providers) to a newer Airflow that would shadow the base image installation.
constraint-dependencies = ["apache-airflow>=3.2.2"]
